add inline items
