# core-tests/e2e-tests/spring-rest-openapi-v3/src/main/resources/static/openapi-dto-reflective-assert.yaml
@@ -4,86 +4,114 @@ info:
   version: 1.0.0
 
 paths:
-  /primitiveTypes:
+  /items-inline:
     post:
-      summary: Example with all primitive and format types (no array/object)
+      summary: Accepts an array of objects, each with numbers and labels
       requestBody:
         required: true
         content:
           application/json:
             schema:
-              type: object
-              properties:
-                aString:
-                  type: string
-                aRegex:
-                  type: string
-                  pattern: "^[a-zA-Z0-9]+$"
-                aDate:
-                  type: string
-                  format: date
-                aTime:
-                  type: string
-                  format: time
-                aDateTime:
-                  type: string
-                  format: date-time
-                anInteger:
-                  type: integer
-                aLong:
-                  type: integer
-                  format: int64
-                aDouble:
-                  type: number
-                aFloat:
-                  type: number
-                  format: float
-                aBoolean:
-                  type: boolean
-                aNullableString:
-                  type: string
-                  nullable: true
-              required:
-                - aString
-                - aRegex
-                - aBase64String
-                - aDate
-                - aTime
-                - aDateTime
-                - anInteger
-                - aLong
-                - aDouble
-                - aFloat
-                - aBoolean
+              type: array
+              items:
+                type: object
+                required: [numbers, labels]
+                properties:
+                  numbers:
+                    type: array
+                    items:
+                      type: integer
+                  labels:
+                    type: array
+                    items:
+                      type: object
+                      required: [value]
+                      properties:
+                        value:
+                          type: string
       responses:
         '200':
           description: OK
-  /parent:
-    post:
-      summary: Uses ParentSchema, which references ChildSchema
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/ParentSchema'
-      responses:
-        '200':
-          description: OK
-  /allof:
-    post:
-      summary: Combines two components NamePart and AgePart
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              allOf:
-                - $ref: '#/components/schemas/NamePart'
-                - $ref: '#/components/schemas/AgePart'
-      responses:
-        '200':
-          description: OK
+#  /primitiveTypes:
+#    post:
+#      summary: Example with all primitive and format types (no array/object)
+#      requestBody:
+#        required: true
+#        content:
+#          application/json:
+#            schema:
+#              type: object
+#              properties:
+#                aString:
+#                  type: string
+#                aRegex:
+#                  type: string
+#                  pattern: "^[a-zA-Z0-9]+$"
+#                aDate:
+#                  type: string
+#                  format: date
+#                aTime:
+#                  type: string
+#                  format: time
+#                aDateTime:
+#                  type: string
+#                  format: date-time
+#                anInteger:
+#                  type: integer
+#                aLong:
+#                  type: integer
+#                  format: int64
+#                aDouble:
+#                  type: number
+#                aFloat:
+#                  type: number
+#                  format: float
+#                aBoolean:
+#                  type: boolean
+#                aNullableString:
+#                  type: string
+#                  nullable: true
+#              required:
+#                - aString
+#                - aRegex
+#                - aBase64String
+#                - aDate
+#                - aTime
+#                - aDateTime
+#                - anInteger
+#                - aLong
+#                - aDouble
+#                - aFloat
+#                - aBoolean
+#      responses:
+#        '200':
+#          description: OK
+#  /parent:
+#    post:
+#      summary: Uses ParentSchema, which references ChildSchema
+#      requestBody:
+#        required: true
+#        content:
+#          application/json:
+#            schema:
+#              $ref: '#/components/schemas/ParentSchema'
+#      responses:
+#        '200':
+#          description: OK
+#  /allof:
+#    post:
+#      summary: Combines two components NamePart and AgePart
+#      requestBody:
+#        required: true
+#        content:
+#          application/json:
+#            schema:
+#              allOf:
+#                - $ref: '#/components/schemas/NamePart'
+#                - $ref: '#/components/schemas/AgePart'
+#      responses:
+#        '200':
+#          description: OK
 # TODO: Restore when support for ChoiceGene has been added
 #  /anyof:
 #    post:
